<resources>
    <string name="app_name">ShopAves</string>
    <string name="next">NEXT</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="categories">CATEGORIES</string>
    <string name="select_your_interests">Select Your Interests</string>
    <string name="electronics">Electronics</string>
    <string name="sports">Sports</string>
    <string name="politics">Politics</string>
    <string name="education">Education</string>
    <string name="architecture">Architecture</string>
    <string name="fashion">Fashion</string>
    <string name="trands">Trands</string>
    <string name="food">Food</string>
    <string name="music">Music</string>
    <string name="photo">Photo</string>
    <string name="social">Social</string>
    <string name="enter_styles">Enter Styles</string>
    <string name="enter_tags">Enter Tags</string>
    <string name="enter_cities">Enter Cities</string>
    <string name="forgot">Forgot?</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="sign_in">Sign In!</string>
    <string name="shop_by_categories">SHOP BY CATEGORIES</string>
    <string name="shop_by_brands">SHOP BY BRANDS</string>
    <string name="slash">\</string>
    <string name="home_furniture"><![CDATA[Home & Furniture]]></string>
    <string name="create_colletion">CREATE COLLECTION</string>
    <string name="reset">RESET</string>
    <string name="title">TITLE</string>
    <string name="collection_name">Collection Name</string>
    <string name="set_category">SET CATEGORY</string>
    <string name="tap_to_select_category">Tap to select Category</string>
    <string name="description">DESCRIPTION</string>
    <string name="somthing_about_collection">Something About Collection...</string>
    <string name="colletion">COLLECTION</string>
    <string name="view_all_comments">View All Comments</string>
    <string name="descriptin">Description</string>
    <string name="items_in_this_set">Items In This Set</string>
    <string name="see_all">See All</string>
    <string name="similar_collections">Similar Collections</string>
    <string name="items_in_set">ITEMS IN THIS SET</string>
    <string name="by_this_set">BY THIS SET</string>
    <string name="life_style">LIFE STYLE</string>
    <string name="women_s_fashion">WOMEN\'S FASHION</string>
    <string name="publish">PUBLISH</string>
    <string name="add_product">ADD PRODUCT</string>
    <string name="upload_photos">UPLOAD PHOTOS</string>
    <string name="upload_video">UPLOAD VIDEO</string>
    <string name="item_name">Item Name</string>
    <string name="tap_to_select_sub_category">Tap to Select Sub-category</string>
    <string name="set_sub_category">SET SUB-CATEGORY</string>
    <string name="brand">BRAND</string>
    <string name="tap_to_select_brand">Tap to Select Brand</string>
    <string name="condition">CONDITION</string>
    <string name="mnew">New</string>
    <string name="item_price">$ - Item MRP Price</string>
    <string name="price">PRICE</string>
    <string name="offered_discount">OFFERED DISCOUNT</string>
    <string name="in_percentage">In percentage</string>
    <string name="preferences">Preferences</string>
    <string name="country">COUNTRY</string>
    <string name="city_state">CITY,STATE</string>
    <string name="postal_code">POSTAL CODE</string>
    <string name="used">Used</string>
    <string name="no_returns_accepted">No Returns Accepted</string>
    <string name="return_accepted">Return Accepted</string>
    <string name="product">PRODUCT</string>
    <string name="somthing_about_product">Something About Product...</string>
    <string name="save">Save</string>
    <string name="comments">COMMENTS</string>
    <string name="specification">Specifications</string>
    <string name="size">Size</string>
    <string name="payment">PAYMENT</string>
    <string name="handling_time">Handling Time</string>
    <string name="returns">Returns</string>
    <string name="profile">PROFILE</string>
    <string name="message">MESSAGE</string>
    <string name="follow">FOLLOW</string>
    <string name="first_name">FIRST NAME</string>
    <string name="last_name">LAST NAME</string>
    <string name="email_address">EMAIL ADDRESS</string>
    <string name="address">ADDRESS</string>
    <string name="city">CITY</string>
    <string name="state">STATE</string>
    <string name="zipcode">ZIP CODE</string>
    <string name="paymentsucc">Payment Successful!</string>
    <string name="cancelconfirm">Cancellation Confirmed</string>
    <string name="address2">ADDRESS LINE 2</string>
    <string name="user_name">USER NAME</string>
    <string name="phone_number">PHONE NUMBER</string>
    <string name="delete">DELETE</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="following">FOLLOWING</string>
    <string name="people">PEOPLE</string>
    <string name="ongoing">ONGOING</string>
    <string name="terms">TERMS OF USE</string>
    <string name="privacy">PRIVACY POLICY</string>
    <string name="delivered">DELIVERED</string>
    <string name="brands">BRANDS</string>
    <string name="deals">DEALS</string>
    <string name="shop">SHOP</string>
    <string name="collection">COLLECTION</string>
    <string name="sets">SETS</string>
    <string name="user_name_or_email_address">USER NAME OR EMAIL ADDRESS</string>
    <string name="most_popular">Most Popular</string>
    <string name="name">NAME</string>
    <string name="facebook_app_id">178514719279947</string>
    <string name="serverclientid">306975753073-pdtcgu1fq43h2s0i0qdm2nii2rsgcfo5.apps.googleusercontent.com</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="write_a_review">Write a Review</string>
    <string name="submit">SUBMIT</string>
    <string name="add_to_wist_list">Add to Wishlist</string>
    <string name="seeall">SeeAll</string>
    <string name="country_large">COUNTRY</string>
    <string name="view_all_reviews">View All Reviews</string>
    <string name="all">All</string>
    <string name="positive">Positive</string>
    <string name="negative">Negative</string>
    <string name="_0_review">0 Review</string>
    <string name="edit">EDIT</string>
    <string name="add_new_wishlist">ADD NEW WISHLIST</string>
    <string name="coupon_code">COUPON CODE</string>
    <string name="sale_price">Sale price</string>
    <string name="change_password">Change Password</string>
    <string name="item_sale_price">$ - Item Sale Price</string>
    <string name="paypal_accounts">Paypal Accounts</string>
    <string name="add_more">Add More</string>
    <string name="paypal">Paypal</string>
    <string name="default_paypal_email">Default Paypal Email</string>
    <string name="weight">Weight</string>
    <string name="weight_capital">WEIGHT</string>
    <string name="package_dimensions">Package Dimensions</string>
    <string name="length">LENGTH</string>
    <string name="inches">inches</string>
    <string name="width">WIDTH</string>
    <string name="height">HEIGHT</string>
    <string name="shipping">Shipping</string>
    <string name="weight_size"><![CDATA[Weight & Size -]]></string>
    <string name="your_paypal_email_address">YOUR PAYPAL EMAIL ADDRESS</string>
    <string name="save_paypal_email">SAVE PAYPAL EMAIL</string>
    <string name="sold">Sold</string>
    <string name="transaction_history">Transaction History</string>
    <string name="remove">Remove</string>
    <string name="shipping_type">SHIPPING TYPE</string>
    <string name="services">SERVICES</string>
    <string name="bank_check">Bank Cheque</string>
    <string name="your_bank_name">YOUR BANK NAME</string>
    <string name="check_receive_address">CHEQUE RECEIVE ADDRESS</string>
    <string name="save_payment_details">SAVE PAYMENT DETAILS</string>
    <string name="continueshop">CONTINUE SHOPPING</string>
    <string name="returned">RETURNED</string>
    <string name="canceled">CANCELED</string>
    <string name="title_activity_coupan">CoupanActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_transaction_details">TransactionDetailsActivity</string>
    <string name="fashion_trending">FASHION TRENDING</string>
    <string name="what_s_new">WHAT\'S NEW</string>
    <string name="what_s_hot">WHAT\'S HOT</string>
    <string name="items">Items.</string>
    <string name="followers">Followers .</string>
    <string name="language">LANGUAGE</string>
    <string name="region">Region</string>
    <string name="sho_p">Shop</string>
    <string name="deal_s">Deals</string>
    <string name="term_of_use_privacy_policy">Terms of Use/Privacy Policy</string>
    <string name="order_history">Order History</string>
    <string name="contacts">Contacts</string>
    <string name="faq">FAQ</string>
    <string name="address_c">ADDRESS</string>
    <string name="help">Help</string>
    <string name="wishlist">Wishlist</string>
    <string name="account">Account</string>
    <string name="signin">SIGN IN</string>
    <string name="rewards">Rewards</string>
    <string name="collections">Collections</string>
    <string name="create_product">Create Product</string>
    <string name="manage_social">Manage Social</string>
    <string name="contact_us">Contact Us</string>
    <string name="sale_alert">Sale Alert</string>
    <string name="notifications">Notifications</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="transaction_details">Transaction Details</string>
    <string name="sign_up">SIGN UP</string>
    <string name="or">or</string>
    <string name="comment_s">Comments</string>
    <string name="checkout">CHECKOUT</string>
    <string name="address_line_2">ADDRESS LINE 2</string>
    <string name="zip_code">ZIP CODE</string>
    <string name="make_this_my_default_shipping_address">Make this my default shipping address.</string>
    <string name="most_recent">Most recent</string>
    <string name="apply_coupons">APPLY COUPONS</string>
    <string name="are_you_sure_you_would_like_to_cancel_this_order">Are you sure you would like to cancel this order?</string>
    <string name="a_cancellation_fee_will_be_applied_depends_on_the_location_and_cost_of_the_product">A cancellation fee will be applied depends on the location and cost of the product.</string>
    <string name="reason_for_cancellation">Reason For Cancellation</string>
    <string name="select_reason">Select Reason</string>
    <string name="confirm_cancellation">Confirm Cancellation</string>
    <string name="your_order_has_been_cancelled">Your order has been cancelled.</string>
    <string name="you_will_receive_the_refund_nin_8_days">You will receive the refund\nin 8 days.</string>
    <string name="old_password">OLD PASSWORD</string>
    <string name="new_password">NEW PASSWORD</string>
    <string name="sav_e">Save</string>
    <string name="cancel">Cancel</string>
    <string name="password">PASSWORD</string>
    <string name="forgot_your_password">Forgot Your Password?</string>
    <string name="enter_your_email_below_to_receive_your_n_password_rest_instructions">Enter your email below to receive your\n password rest instructions</string>
    <string name="send_instruction">SEND INSTRUCTION</string>
    <string name="login">LOGIN</string>
    <string name="skip">Skip</string>
    <string name="cvc_number">cvc_number</string>
    <string name="make_payment">make_payment</string>
    <string name="Enter_card_details">Enter_card_details</string>
    <string name="Expiry_date">Expiry_date</string>
</resources>