<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"

    tools:context="com.shop.shopaves.Activity.DeliveryActivity">
    <include layout="@layout/app_header"
        android:id="@+id/header"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"

        android:text="@string/Enter_card_details"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/edit_card_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="Card Number"
        android:imeOptions="actionNext"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/Expiry_date"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <Spinner
            android:id="@+id/spinner_exp_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:entries="@array/exp_month"
            android:layout_weight="1"/>

        <Spinner
            android:id="@+id/spinner_exp_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:entries="@array/exp_year"
            android:layout_weight="1"
            />

    </LinearLayout>

    <EditText
        android:id="@+id/edit_cvc_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:maxLength="3"
        android:hint="@string/cvc_number"
        android:imeOptions="actionNext"
        />

    <Button
        android:id="@+id/btn_make_payment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/make_payment"
        />
</LinearLayout>
