<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:paddingLeft="@dimen/dp25"
    android:paddingRight="@dimen/dp25"
    android:background="@color/white"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="@dimen/dp20"
        android:src="@drawable/forgot_password"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp15"
        android:textSize="@dimen/sp15"
        android:textColor="@color/black"
        android:text="@string/forgot_your_password"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#6E779F"
        android:layout_marginTop="@dimen/dp10"
        android:textSize="@dimen/sp13"
        android:text="@string/enter_your_email_below_to_receive_your_n_password_rest_instructions"
        android:id="@+id/textView" />

    <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp40"
            android:background="@android:color/transparent"
            android:hint="@string/email_address"
            android:layout_marginTop="@dimen/dp30"
            android:paddingRight="@dimen/dp15"
            android:paddingLeft="@dimen/dp5"
            android:singleLine="true"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/text_hint"
            android:textColor="@color/black"
            android:textSize="@dimen/sp13"
            android:id="@+id/email" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp1"
        android:background="@color/text_hint"
        android:layout_marginTop="@dimen/dp5"/>
    <Button
        android:id="@+id/next"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/login_bttn"
        android:text="@string/send_instruction"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp15"
        style="?android:attr/borderlessButtonStyle"
        android:layout_marginTop="@dimen/dp20"
        android:layout_marginBottom="@dimen/dp25"/>

</LinearLayout>