<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_create_collection"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_grey"
    tools:context="com.shop.shopaves.Activity.CreateCollection">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp45"
        android:paddingRight="@dimen/dp15"
        android:id="@+id/hdrr"
        android:background="@color/colorPrimary"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="@dimen/dp16"
            android:textColor="#FFFFE0"
            android:text="@string/create_colletion"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:textColor="@color/white"
            android:alpha=".7"
            android:clickable="false"
            android:id="@+id/reset"
            android:textSize="15sp"
            android:text="@string/reset"/>

        <ImageView
            android:layout_width="@dimen/dp40"
            android:layout_height="@dimen/dp40"
            android:id="@+id/back_create_collectn"
            android:padding="@dimen/dp10"
            android:src="@drawable/back_arrow"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hdrr"
        app:cardElevation="@dimen/dp1"
        android:layout_margin="10dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="@dimen/dp20">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp10"
                android:text="@string/title"
                android:textColor="@color/text_hint"
                android:textSize="@dimen/sp16" />

            <EditText
                android:id="@+id/collectionname"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp40"
                android:background="@null"
                android:hint="COLLECTION NAME"
                android:inputType="textCapSentences"
                android:paddingRight="@dimen/dp10"
                android:singleLine="true"
                android:textColor="@color/fade_black"
                android:textColorHint="@color/grey"
                android:textSize="@dimen/sp16" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp1"
                android:layout_marginTop="@dimen/dp5"
                android:background="@color/grey_dividr" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp20"
                android:text="@string/set_category"
                android:textColor="@color/text_hint"
                android:textSize="@dimen/sp16" />

            <RelativeLayout
                android:id="@+id/selectcategory"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp40">

                <TextView
                    android:id="@+id/subcategoryname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:background="@null"
                    android:hint="@string/tap_to_select_category"
                    android:paddingRight="@dimen/dp10"
                    android:singleLine="true"
                    android:textColorHint="@color/fade_black"
                    android:textSize="@dimen/sp15" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp1"
                android:layout_marginTop="@dimen/dp5"
                android:background="@color/grey_dividr" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp20"
                android:text="@string/description"
                android:textColor="@color/text_hint"
                android:textSize="@dimen/sp16" />

            <EditText
                android:id="@+id/desp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp140"
                android:background="@null"
                android:gravity="top"
                android:hint="@string/somthing_about_collection"
                android:inputType="textMultiLine"
                android:paddingBottom="@dimen/dp10"
                android:paddingRight="@dimen/dp10"
                android:paddingTop="@dimen/dp10"
                android:textColor="@color/fade_black"
                android:textColorHint="@color/fade_black"
                android:textSize="@dimen/sp15" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/dp5"
                android:background="@color/grey_dividr" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/next_to_collection"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp50"
        android:alpha=".9"
        android:background="@drawable/red_bttn"
        android:textColor="@android:color/white"
        style="?android:attr/borderlessButtonStyle"
        android:text="@string/next"
        android:textSize="@dimen/sp13"
        android:layout_marginBottom="22dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
