<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:apps="http://schemas.android.com/tools"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/dp20"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp45"
            android:textColorHint="@color/text_hint"
            app:theme="@style/TextLabel"
            android:layout_marginTop="@dimen/dp10"
            >
            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp45"
                android:background="@android:color/transparent"
                android:hint="@string/user_name_or_email_address"
                android:paddingRight="@dimen/dp15"
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:textColor="@color/fade_black"
                android:textSize="@dimen/sp14"
                android:textColorHint="@color/text_hint"
                />
        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp1"
            android:background="#AAAFC2"
            android:layout_marginTop="@dimen/dp10"/>
    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp10"
        android:paddingBottom="@dimen/dp10">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp45"
            android:textColorHint="@color/text_hint"
            app:theme="@style/TextLabel"
            app:passwordToggleEnabled="false"
            android:layout_toLeftOf="@+id/forgottext"
            >
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp45"
                android:background="@android:color/transparent"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingRight="@dimen/dp15"
                android:singleLine="true"
                android:textColorHint="#6E779F"
                android:textColor="@color/fade_black"
                android:textSize="@dimen/sp14"/>
        </android.support.design.widget.TextInputLayout>


        <TextView
            android:id="@+id/forgottext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:textColor="@color/fade_black"
            android:textSize="@dimen/sp14"
            android:text="@string/forgot"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp1"
        android:background="#AAAFC2"
       />

    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp50"
        android:text="@string/login"
        android:textSize="@dimen/dp15"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/dp20"
        android:layout_marginBottom="@dimen/dp10"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/login_bttn"
        style="?android:attr/borderlessButtonStyle"
        android:id="@+id/login_button" />

    <TextView
        android:id="@+id/skiplogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip"
        android:textSize="@dimen/dp15"
        android:padding="@dimen/dp15"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="@dimen/dp10"
        android:layout_gravity="center_horizontal"
        />




    </LinearLayout>
